--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>AIAIAI</h1>
+        <h1>AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI</h1>
 
         <h2>2019</h2>
         ARFLoor
@@ -18,6 +18,10 @@
         <br>
         <br>
         <h2>2018</h2>
+        NIPS 2018 Spatiotemporal Workshop paper:
+        <a href="https://arxiv.org/abs/1812.10915">https://arxiv.org/abs/1812.10915</a>,
+        <a href="https://sites.google.com/site/nips18spatiotemporal/home">Workshop home page</a>
+        <br>
         Inpaint:
         <a href="http://inpaint.aiaiai.team">http://inpaint.aiaiai.team</a>
         <br>
@@ -26,7 +30,7 @@
         <br>
         <br>
         <h2>2017</h2>
-        Chuzi:
+        Chuzi (Junction 2017 Challenge winner):
         <a href="https://devpost.com/software/chuzi">https://devpost.com/software/chuzi</a>,
         <a href="https://appetize.io/app/w09207g7edqd4qefwq4hthayx0">Demo</a>,
         <a href="./app-debug.apk">.apk</a>
@@ -46,6 +50,10 @@
         Исследование по грантам РФ:
         <a href="http://grants.tilda.ws">http://grants.tilda.ws</a>
         <br>
+        <br>
+        <h2>2014</h2>
+        Победа в хакатоне на Физтехе:
+        <a href="http://hack.mipt.ru/post/99663494834/на-физтехе-прошел-хакатон">Историческая справка</a>
     </div>
 </body>
 </html>    
