--- a/hosted.html
+++ b/hosted.html
@@ -34,17 +34,17 @@
         8003 -> <a href="http://inpaint.aiaiai.team">inpaint.aiaiai.team</a>
         <br>
         <span id="project-inpaint-mongo-status"></span>
-        8004 -> <a href="http://inpaint-mongo.aiaiai.team">inpaint-mongo.aiaiai.team</a>
+        8004 (docker) -> <a href="http://inpaint-mongo.aiaiai.team">inpaint-mongo.aiaiai.team</a>
         <br>
         <br>
         <span id="project-parkinson-status"></span>
         6000 -> <a href="http://parkinson.aiaiai.team">parkinson.aiaiai.team</a>
         <br>
         <span id="project-parkinson-adminer-status"></span>
-        8080 -> <a href="http://parkinson-adminer.aiaiai.team">parkinson-adminer.aiaiai.team</a>
+        8080 (docker) -> <a href="http://parkinson-adminer.aiaiai.team">parkinson-adminer.aiaiai.team</a>
         <br>
         <span id="project-parkinson-flower-status"></span>
-        5555 -> <a href="http://parkinson-flower.aiaiai.team">parkinson-flower.aiaiai.team</a>
+        5555 (docker) -> <a href="http://parkinson-flower.aiaiai.team">parkinson-flower.aiaiai.team</a>
         <br>
         <br>
         <h2>Hosted files</h2>
