--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>2018</h2>
         NIPS 2018 Spatiotemporal Workshop paper:
         <a href="https://arxiv.org/abs/1812.10915">https://arxiv.org/abs/1812.10915</a>,
-        <a href="https://sites.google.com/site/nips18spatiotemporal/home">Workshop home page</a>
+        <a href="https://sites.google.com/site/nips18spatiotemporal/home">Workshop page</a>
         <br>
         Inpaint:
         <a href="http://inpaint.aiaiai.team">http://inpaint.aiaiai.team</a>
