--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <style>
+        h1 a, h1 a:hover, h2 a, h2 a:hover {
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI</h1>
-
-        <h2>2019</h2>
+        <h1>
+            <a href="#">AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI</a>
+        </h1>
+        <h2 id="2019"><a href="#2019">2019</a></h2>
         ARFLoor
         <a href="http://arfloor.eu">http://arfloor.eu</a>,
         <a href="https://itunes.apple.com/ru/app/austriawood-co/id1448948947?mt=8&ign-mpt=uo%3D2">App Store</a>
         <br>
         <br>
-        <h2>2018</h2>
+        <h2 id="2018"><a href="#2018">2018</a></h2>
         NIPS 2018 Spatiotemporal Workshop paper:
         <a href="https://arxiv.org/abs/1812.10915">https://arxiv.org/abs/1812.10915</a>,
         <a href="https://sites.google.com/site/nips18spatiotemporal/home">Workshop page</a>
@@ -29,7 +35,7 @@
         <a href="https://t.me/loss_function_porn">https://t.me/loss_function_porn</a>
         <br>
         <br>
-        <h2>2017</h2>
+        <h2 id="2017"><a href="#2017">2017</a></h2>
         Chuzi (Junction 2017 Challenge winner):
         <a href="https://devpost.com/software/chuzi">https://devpost.com/software/chuzi</a>,
         <a href="https://appetize.io/app/w09207g7edqd4qefwq4hthayx0">Demo</a>,
@@ -46,16 +52,14 @@
         <a href="http://neuralme.aiaiai.team">http://neuralme.aiaiai.team</a>
         <br>
         <br>
-        <h2>2016</h2>
+        <h2 id="2016"><a href="#2016">2016</a></h2>
         Исследование по грантам РФ:
         <a href="http://grants.tilda.ws">http://grants.tilda.ws</a>
         <br>
         <br>
-        <h2>2014</h2>
+        <h2 id="2014"><a href="#2014">2014</a></h2>
         Победа в хакатоне на Физтехе:
         <a href="http://hack.mipt.ru/post/99663494834/на-физтехе-прошел-хакатон">Историческая справка</a>
-        <br>
-        <br>
     </div>
 </body>
 </html>    
