update projects list

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <style>
         h1 a, h1 a:hover, h2 a, h2 a:hover {
             color: black;
@@ -13,69 +14,92 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>
-            <a href="#">AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI</a>
-        </h1>
-        <h2 id="2019"><a href="#2019">2019</a></h2>
-        ARFLoor
-        <a href="http://arfloor.eu">http://arfloor.eu</a>,
-        <a href="https://itunes.apple.com/ru/app/austriawood-co/id1448948947?mt=8&ign-mpt=uo%3D2">App Store</a>
-        <br>
-        <br>
-        <h2 id="2018"><a href="#2018">2018</a></h2>
-        NIPS 2018 Spatiotemporal Workshop paper:
-        <a href="https://arxiv.org/abs/1812.10915">https://arxiv.org/abs/1812.10915</a>,
-        <a href="https://sites.google.com/site/nips18spatiotemporal/home">Workshop page</a>
-        <br>
-        Inpaint:
-        <a href="http://inpaint.aiaiai.team">http://inpaint.aiaiai.team</a>
-        <br>
-        Loss function porn:
-        <a href="https://t.me/loss_function_porn">https://t.me/loss_function_porn</a>
-        <br>
-        <br>
-        <h2 id="2017"><a href="#2017">2017</a></h2>
-        Chuzi (Junction 2017 Challenge winner):
-        <a href="https://devpost.com/software/chuzi">https://devpost.com/software/chuzi</a>,
-        <a href="https://appetize.io/app/w09207g7edqd4qefwq4hthayx0">Demo</a>,
-        <a href="./app-debug.apk">.apk</a>
-        <br>
-        Льготники:
-        <a href="http://lgotniki.tilda.ws">http://lgotniki.tilda.ws</a>,
-        <a href="http://lgotniki.aiaiai.team">http://lgotniki.aiaiai.team</a>
-        <br>
-        Meduza-like тест на выпускном ШАД 2017:
-        <a href="http://ysda-test.aiaiai.team">http://ysda-test.aiaiai.team</a>
-        <br>
-        NeuralMe:
-        <a href="http://neuralme.aiaiai.team">http://neuralme.aiaiai.team</a>
-        <br>
-        <br>
-        <h2 id="2016"><a href="#2016">2016</a></h2>
-        Исследование по грантам РФ:
-        <a href="http://grants.tilda.ws">http://grants.tilda.ws</a>
-        <br>
-        <br>
-        <h2 id="2014"><a href="#2014">2014</a></h2>
-        Победа в хакатоне на Физтехе:
-        <a href="http://hack.mipt.ru/post/99663494834/на-физтехе-прошел-хакатон">Историческая справка</a>
-    </div>
+<div class="container">
+    <h1>
+        <a href="#">AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI</a>
+    </h1>
 
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
-       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-       m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-       (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-    
-       ym(52315369, "init", {
-            id:52315369,
-            clickmap:true,
-            trackLinks:true,
-            accurateTrackBounce:true
-       });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/52315369" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
+    <h2 id="2019"><a href="#2019">2019</a></h2>
+    NN-based calculator:
+    <a href="http://calculator.aiaiai.team">calculator.aiaiai.team</a>
+    <br>
+    "Precipitation Nowcasting with Satellite Imagery" (KDD 2019):
+    <a href="https://arxiv.org/abs/1905.09932">arxiv.org/abs/1905.09932</a>,
+    <a href="https://youtu.be/9zd3VR-prYU">youtu.be/9zd3VR-prYU</a>
+    <br>
+    ARFLoor:
+    <a href="https://itunes.apple.com/ru/app/austriawood-co/id1448948947?mt=8&ign-mpt=uo%3D2">App Store</a>,
+    <a href="http://arfloor.eu">arfloor.eu</a>
+    <br>
+    <br>
+
+    <h2 id="2018"><a href="#2018">2018</a></h2>
+    "Spatiotemporal Data Fusion for Precipitation Nowcasting" (NIPS 2018 Spatiotemporal Workshop):
+    <a href="https://arxiv.org/abs/1812.10915">arxiv.org/abs/1812.10915</a>,
+    <a href="https://sites.google.com/site/nips18spatiotemporal/home">workshop page</a>
+    <br>
+    Inpaint:
+    <a href="http://inpaint.aiaiai.team">inpaint.aiaiai.team</a>
+    <br>
+    Loss function porn:
+    <a href="https://t.me/loss_function_porn">t.me/loss_function_porn</a>
+    <br>
+    <br>
+
+    <h2 id="2017"><a href="#2017">2017</a></h2>
+    Chuzi (Junction 2017 Challenge winner):
+    <a href="https://devpost.com/software/chuzi">devpost.com/software/chuzi</a>,
+    <a href="https://appetize.io/app/w09207g7edqd4qefwq4hthayx0">demo</a>,
+    <a href="./app-debug.apk">.apk</a>
+    <br>
+    Льготники:
+    <a href="http://lgotniki.tilda.ws">lgotniki.tilda.ws</a>,
+    <a href="http://lgotniki.aiaiai.team">lgotniki.aiaiai.team</a>
+    <br>
+    Meduza-like тест на выпускном ШАД 2017:
+    <a href="http://ysda-test.aiaiai.team">ysda-test.aiaiai.team</a>
+    <br>
+    NeuralMe:
+    <a href="http://neuralme.aiaiai.team">neuralme.aiaiai.team</a>
+    <br>
+    "Do logarithmic proximity measures outperform plain ones in graph clustering?" (6th International Conference on
+    Network Analysis):
+    <a href="https://arxiv.org/abs/1605.01046">arxiv.org/abs/1605.01046</a>
+    <br>
+    <br>
+
+    <h2 id="2016"><a href="#2016">2016</a></h2>
+    Исследование по грантам РФ:
+    <a href="http://grants.tilda.ws">grants.tilda.ws</a>
+    <br>
+    <br>
+
+    <h2 id="2014"><a href="#2014">2014</a></h2>
+    Победа в хакатоне на Физтехе:
+    <a href="http://hack.mipt.ru/post/99663494834/на-физтехе-прошел-хакатон">Историческая справка</a>
+</div>
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+        m[i] = m[i] || function () {
+            (m[i].a = m[i].a || []).push(arguments)
+        };
+        m[i].l = 1 * new Date();
+        k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(52315369, "init", {
+        id: 52315369,
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true
+    });
+</script>
+<noscript>
+    <div><img src="https://mc.yandex.ru/watch/52315369" style="position:absolute; left:-9999px;" alt=""/></div>
+</noscript>
+<!-- /Yandex.Metrika counter -->
 </body>
 </html>    
