--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         h1 a, h1 a:hover, h2 a, h2 a:hover {
             color: black;
         }
+
+        ul {
+            list-style-type: none;
+        }
     </style>
 </head>
 <body>
@@ -20,63 +24,100 @@
     </h1>
 
     <h2 id="2019"><a href="#2019">2019</a></h2>
-    NN-based calculator:
-    <a href="http://calculator.aiaiai.team">calculator.aiaiai.team</a>
-    <br>
-    "Precipitation Nowcasting with Satellite Imagery" (KDD 2019):
-    <a href="https://arxiv.org/abs/1905.09932">arxiv.org/abs/1905.09932</a>,
-    <a href="https://youtu.be/9zd3VR-prYU">youtu.be/9zd3VR-prYU</a>
-    <br>
-    ARFLoor:
-    <a href="https://itunes.apple.com/ru/app/austriawood-co/id1448948947?mt=8&ign-mpt=uo%3D2">App Store</a>,
-    <a href="http://arfloor.eu">arfloor.eu</a>
-    <br>
-    <br>
+<!--    <div>-->
+<!--        GAN-based calculator:-->
+<!--        <ul>-->
+<!--            <li><a href="http://gan-calculator.aiaiai.team">gan-calculator.aiaiai.team</a></li>-->
+<!--        </ul>-->
+<!--    </div>-->
+    <div>
+        "Precipitation Nowcasting with Satellite Imagery" (KDD 2019):
+        <ul>
+            <li><a href="https://arxiv.org/abs/1905.09932">arxiv.org/abs/1905.09932</a></li>
+            <li><a href="https://youtu.be/9zd3VR-prYU">youtu.be/9zd3VR-prYU</a></li>
+        </ul>
+    </div>
+    <div>
+        ARFLoor:
+        <ul>
+            <li><a href="https://itunes.apple.com/ru/app/austriawood-co/id1448948947?mt=8&ign-mpt=uo%3D2">App Store</a>
+            </li>
+            <li><a href="http://arfloor.eu">arfloor.eu</a></li>
+        </ul>
+    </div>
 
     <h2 id="2018"><a href="#2018">2018</a></h2>
-    "Spatiotemporal Data Fusion for Precipitation Nowcasting" (NIPS 2018 Spatiotemporal Workshop):
-    <a href="https://arxiv.org/abs/1812.10915">arxiv.org/abs/1812.10915</a>,
-    <a href="https://sites.google.com/site/nips18spatiotemporal/home">workshop page</a>
-    <br>
-    Inpaint:
-    <a href="http://inpaint.aiaiai.team">inpaint.aiaiai.team</a>
-    <br>
-    Loss function porn:
-    <a href="https://t.me/loss_function_porn">t.me/loss_function_porn</a>
-    <br>
-    <br>
+    <div>
+        "Spatiotemporal Data Fusion for Precipitation Nowcasting" (NIPS 2018 Spatiotemporal Workshop):
+        <ul>
+            <li><a href="https://arxiv.org/abs/1812.10915">arxiv.org/abs/1812.10915</a></li>
+            <li><a href="https://sites.google.com/site/nips18spatiotemporal/home">workshop page</a></li>
+        </ul>
+    </div>
+    <div>
+        Inpaint:
+        <ul>
+            <li><a href="http://inpaint.aiaiai.team">inpaint.aiaiai.team</a></li>
+        </ul>
+    </div>
+    <div>
+        Loss function porn:
+        <ul>
+            <li><a href="https://t.me/loss_function_porn">@loss_function_porn</a></li>
+        </ul>
+    </div>
 
     <h2 id="2017"><a href="#2017">2017</a></h2>
-    Chuzi (Junction 2017 Challenge winner):
-    <a href="https://devpost.com/software/chuzi">devpost.com/software/chuzi</a>,
-    <a href="https://appetize.io/app/w09207g7edqd4qefwq4hthayx0">demo</a>,
-    <a href="./app-debug.apk">.apk</a>
-    <br>
-    Льготники:
-    <a href="http://lgotniki.tilda.ws">lgotniki.tilda.ws</a>,
-    <a href="http://lgotniki.aiaiai.team">lgotniki.aiaiai.team</a>
-    <br>
-    Meduza-like тест на выпускном ШАД 2017:
-    <a href="http://ysda-test.aiaiai.team">ysda-test.aiaiai.team</a>
-    <br>
-    NeuralMe:
-    <a href="http://neuralme.aiaiai.team">neuralme.aiaiai.team</a>
-    <br>
-    "Do logarithmic proximity measures outperform plain ones in graph clustering?" (6th International Conference on
-    Network Analysis):
-    <a href="https://arxiv.org/abs/1605.01046">arxiv.org/abs/1605.01046</a>
-    <br>
-    <br>
+    <div>
+        Chuzi (Junction 2017 Challenge winner):
+        <ul>
+            <li><a href="https://devpost.com/software/chuzi">devpost.com/software/chuzi</a></li>
+            <li><a href="https://appetize.io/app/w09207g7edqd4qefwq4hthayx0">demo</a></li>
+            <li><a href="./app-debug.apk">.apk</a></li>
+        </ul>
+    </div>
+    <div>
+        Льготники:
+        <ul>
+            <li><a href="http://lgotniki.tilda.ws">lgotniki.tilda.ws</a></li>
+            <li><a href="http://lgotniki.aiaiai.team">lgotniki.aiaiai.team</a></li>
+        </ul>
+    </div>
+    <div>
+        Meduza-like тест на выпускном ШАД 2017:
+        <ul>
+            <li><a href="http://ysda-test.aiaiai.team">ysda-test.aiaiai.team</a></li>
+        </ul>
+    </div>
+    <div>
+        NeuralMe:
+        <ul>
+            <li><a href="http://neuralme.aiaiai.team">neuralme.aiaiai.team</a></li>
+        </ul>
+    </div>
+    <div>
+        "Do logarithmic proximity measures outperform plain ones in graph clustering?"
+        (6th International Conference on Network Analysis):
+        <ul>
+            <li><a href="https://arxiv.org/abs/1605.01046">arxiv.org/abs/1605.01046</a></li>
+        </ul>
+    </div>
 
     <h2 id="2016"><a href="#2016">2016</a></h2>
-    Исследование по грантам РФ:
-    <a href="http://grants.tilda.ws">grants.tilda.ws</a>
-    <br>
-    <br>
+    <div>
+        Исследование по грантам РФ:
+        <ul>
+            <li><a href="http://grants.tilda.ws">grants.tilda.ws</a></li>
+        </ul>
+    </div>
 
     <h2 id="2014"><a href="#2014">2014</a></h2>
-    Победа в хакатоне на Физтехе:
-    <a href="http://hack.mipt.ru/post/99663494834/на-физтехе-прошел-хакатон">Историческая справка</a>
+    <div>
+        Победа в хакатоне на Физтехе:
+        <ul>
+            <li><a href="http://hack.mipt.ru/post/99663494834/на-физтехе-прошел-хакатон">Историческая справка</a></li>
+        </ul>
+    </div>
 </div>
 
 <!-- Yandex.Metrika counter -->
