--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
     </style>
 </head>
 <body>
+<div style="width: 100%; overflow: hidden">
+    <div class="container">
+        <h1>
+            <a href="#" style="white-space: nowrap">
+                AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI
+                AIAIAI AIAIAI AIAIAI
+            </a>
+        </h1>
+    </div>
+</div>
 <div class="container">
-    <h1>
-        <a href="#">AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI AIAIAI</a>
-    </h1>
-
     <h2 id="2019"><a href="#2019">2019</a></h2>
 <!--    <div>-->
 <!--        GAN-based calculator:-->
@@ -35,6 +41,13 @@
         <ul>
             <li><a href="https://arxiv.org/abs/1905.09932">arxiv.org/abs/1905.09932</a></li>
             <li><a href="https://youtu.be/9zd3VR-prYU">youtu.be/9zd3VR-prYU</a></li>
+            <li><a href="https://www.kdd.org/kdd2019/accepted-papers/view/precipitation-nowcasting-with-satellite-imagery">conference page</a></li>
+        </ul>
+    </div>
+    <div>
+        Everybody Dance Now showcase at YaC 2019:
+        <ul>
+            <li><a href="https://youtu.be/28R7JjUjjGY?t=9840">youtu.be/28R7JjUjjGY?t=9840</a></li>
         </ul>
     </div>
     <div>
@@ -108,6 +121,13 @@
         Исследование по грантам РФ:
         <ul>
             <li><a href="http://grants.tilda.ws">grants.tilda.ws</a></li>
+        </ul>
+    </div>
+    <div>
+        WikiWalker:
+        <ul>
+            <li><a href="https://youtu.be/j-IrZ0NXEtQ">youtu.be/j-IrZ0NXEtQ</a></li>
+            <li><a href="https://vk.com/wikiwalker">vk.com/wikiwalker</a></li>
         </ul>
     </div>
 
